--- a/src/attendenceproject/gui/view/MainWindowView.fxml
+++ b/src/attendenceproject/gui/view/MainWindowView.fxml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="448.0" prefWidth="849.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.MainWindowController" />
+
+<AnchorPane id="AnchorPane" prefHeight="448.0" prefWidth="849.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.MainWindowController">
+   <children>
+      <Button fx:id="cardButton" layoutX="188.0" layoutY="209.0" mnemonicParsing="false" text="Card" />
+      <Button fx:id="nameButton" layoutX="610.0" layoutY="209.0" mnemonicParsing="false" text="Name" />
+      <Label layoutX="311.0" layoutY="58.0" text="Login window">
+         <font>
+            <Font size="37.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
