--- a/src/attendenceproject/gui/view/MainWindowView.fxml
+++ b/src/attendenceproject/gui/view/MainWindowView.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane id="AnchorPane" fx:id="innerPane" prefHeight="448.0" prefWidth="849.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.MainWindowController">
    <children>
-      <JFXButton layoutX="130.0" layoutY="173.0" onAction="#signUpWithCard" prefHeight="82.0" prefWidth="154.0" style="-fx-background-color: #0088FF;" text="Login With Card" />
-      <JFXButton layoutX="439.0" layoutY="174.0" onAction="#manualLogin" prefHeight="82.0" prefWidth="146.0" style="-fx-background-color: #0088FF;" text="Login With Credentials" />
+      <JFXButton buttonType="RAISED" layoutX="130.0" layoutY="173.0" onAction="#signUpWithCard" prefHeight="82.0" prefWidth="154.0" style="-fx-background-color: #0088FF;" text="Login With Card" />
+      <JFXButton buttonType="RAISED" layoutX="439.0" layoutY="174.0" onAction="#manualLogin" prefHeight="82.0" prefWidth="146.0" style="-fx-background-color: #0088FF;" text="Login With Credentials" />
    </children>
 </AnchorPane>
