--- a/src/attendenceproject/gui/view/currentAttending.fxml
+++ b/src/attendenceproject/gui/view/currentAttending.fxml
@@ -3,7 +3,8 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="innerPane" prefHeight="380.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.HubController">
+
+<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.HubController">
    <children>
       <JFXButton layoutX="88.0" layoutY="36.0" onAction="#switchToCurrentAttending" text="Current attending" />
       <JFXButton layoutX="330.0" layoutY="36.0" onAction="#switchToAllStudents" text="All students" />
