--- a/src/attendenceproject/gui/view/MainWindowView.fxml
+++ b/src/attendenceproject/gui/view/MainWindowView.fxml
@@ -1,5 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="448.0" prefWidth="849.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.MainWindowController" />
+<AnchorPane id="AnchorPane" prefHeight="661.0" prefWidth="987.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.MainWindowController">
+   <children>
+      <TabPane layoutX="488.0" layoutY="124.0" prefHeight="343.0" prefWidth="811.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <tabs>
+          <Tab text="Untitled Tab 1">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+          <Tab text="Untitled Tab 2">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+            <Tab text="Statistics">
+              <content>
+                <AnchorPane>
+                     <children>
+                        <HBox prefHeight="304.0" prefWidth="811.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <VBox>
+                                 <children>
+                                    <Label text="Course" />
+                                    <ScrollPane>
+                                      <content>
+                                        <AnchorPane prefHeight="232.0" prefWidth="248.0">
+                                             <children>
+                                                <ListView fx:id="CourseView" focusTraversable="false" onMouseClicked="#changeClass" prefHeight="231.0" prefWidth="248.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </ScrollPane>
+                                    <Label text="Student" wrapText="true" />
+                                    <ScrollPane>
+                                      <content>
+                                        <AnchorPane>
+                                             <children>
+                                                <ListView fx:id="StudentView" focusTraversable="false" prefHeight="340.0" prefWidth="248.0" />
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </ScrollPane>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </children>
+</AnchorPane>
