--- a/src/attendenceproject/gui/view/allStudents.fxml
+++ b/src/attendenceproject/gui/view/allStudents.fxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.HubController">
+<AnchorPane id="AnchorPane" fx:id="innerPane" prefHeight="380.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.HubController">
    <children>
-      <JFXButton layoutX="88.0" layoutY="36.0" onAction="#switchToCurrentAttending" text="Current attending" />
-      <JFXButton layoutX="330.0" layoutY="36.0" onAction="#switchToAllStudents" text="All students" />
-      <JFXButton layoutX="569.0" layoutY="36.0" onAction="#switchToStatistics" text="Statistics" />
+      <JFXButton buttonType="RAISED" layoutX="22.0" layoutY="14.0" onAction="#switchToCurrentAttendingStudents" text="Current Attending Students" />
+      <JFXButton buttonType="RAISED" layoutX="647.0" layoutY="14.0" onAction="#switchToStatistics" text="Statistics" />
+      <JFXButton buttonType="RAISED" layoutX="344.0" layoutY="14.0" onAction="#switchToStudents" text="Current Students" />
+      <JFXListView fx:id="currentClassList" layoutX="22.0" layoutY="98.0" onMouseClicked="#showAllStudents" prefHeight="268.0" prefWidth="200.0" />
+      <TableView fx:id="currentStudentList" layoutX="296.0" layoutY="60.0" onMouseClicked="#loadIndividualStudent" prefHeight="306.0" prefWidth="408.0">
+        <columns>
+          <TableColumn fx:id="pictureColumn" prefWidth="137.60003662109375" text="Picture" />
+          <TableColumn fx:id="nameColumn" prefWidth="268.8000183105469" text="Name" />
+        </columns>
+      </TableView>
+      <JFXButton layoutX="22.0" layoutY="60.0" onAction="#loadClasses" text="Load classes" />
    </children>
 </AnchorPane>
