--- a/src/attendenceproject/gui/view/mainHub.fxml
+++ b/src/attendenceproject/gui/view/mainHub.fxml
@@ -5,8 +5,8 @@
 
 <AnchorPane id="AnchorPane" fx:id="innerPane" prefHeight="380.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.HubController">
    <children>
-      <JFXButton layoutX="88.0" layoutY="36.0" onAction="#switchToCurrentAttending" text="Current attending" />
-      <JFXButton layoutX="330.0" layoutY="36.0" onAction="#switchToAllStudents" text="All students" />
-      <JFXButton layoutX="569.0" layoutY="36.0" onAction="#switchToStatistics" text="Statistics" />
+      <JFXButton buttonType="RAISED" layoutX="22.0" layoutY="14.0" onAction="#switchToCurrentAttendingStudents" text="Current Attending Students" />
+      <JFXButton buttonType="RAISED" layoutX="647.0" layoutY="14.0" onAction="#switchToStatistics" text="Statistics" />
+      <JFXButton buttonType="RAISED" layoutX="344.0" layoutY="14.0" onAction="#switchToStudents" text="Current Students" />
    </children>
 </AnchorPane>
