--- a/src/attendenceproject/gui/view/FXML.fxml
+++ b/src/attendenceproject/gui/view/FXML.fxml
@@ -1,11 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.gluonhq.charm.glisten.control.Icon?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+<AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="683.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Icon content="HELP_OUTLINE" layoutX="33.0" layoutY="54.0" prefHeight="145.0" prefWidth="145.0" style="-fx-background-color: grey;" />
+      <Label layoutX="33.0" layoutY="208.0" prefHeight="24.0" prefWidth="145.0" text="Name Surname" />
+      <Separator layoutY="32.0" prefHeight="0.0" prefWidth="700.0" />
+      <MenuBar layoutY="-1.0" prefHeight="34.0" prefWidth="145.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <Separator layoutY="249.0" prefHeight="3.0" prefWidth="700.0" />
+      <PieChart layoutX="33.0" layoutY="263.0" prefHeight="224.0" prefWidth="224.0" style="-fx-background-color: grey;" />
+      <TextField layoutX="303.0" layoutY="54.0" prefHeight="26.0" prefWidth="289.0" text="Insert text here" />
+      <TextField layoutX="303.0" layoutY="94.0" prefHeight="26.0" prefWidth="289.0" text="Insert text here" />
+      <Label layoutX="187.0" layoutY="55.0" prefHeight="24.0" prefWidth="117.0" text="CPR" />
+      <Label layoutX="187.0" layoutY="95.0" prefHeight="24.0" prefWidth="117.0" text="Login username" />
+      <Label layoutX="187.0" layoutY="134.0" prefHeight="24.0" prefWidth="117.0" text="Login password" />
+      <TextField layoutX="303.0" layoutY="134.0" prefHeight="26.0" prefWidth="289.0" text="Insert text here" />
+      <Label layoutX="187.0" layoutY="174.0" prefHeight="24.0" prefWidth="117.0" text="Course" />
+      <TextField layoutX="303.0" layoutY="174.0" prefHeight="26.0" prefWidth="289.0" text="Insert text here" />
+      <Button layoutX="603.0" layoutY="54.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Edit" />
+      <Button layoutX="603.0" layoutY="174.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Edit" />
+      <Button layoutX="603.0" layoutY="134.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Edit" />
+      <Button layoutX="603.0" layoutY="94.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Edit" />
+      <Separator layoutY="528.0" prefHeight="3.0" prefWidth="700.0" />
+      <BarChart layoutX="276.0" layoutY="263.0" prefHeight="224.0" prefWidth="398.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
+   </children>
 </AnchorPane>
