--- a/src/attendenceproject/gui/view/currentUser.fxml
+++ b/src/attendenceproject/gui/view/currentUser.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="753.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendenceproject.gui.controller.CurrentUserController">
@@ -33,5 +34,6 @@
       <Button layoutX="602.0" layoutY="94.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="26.0" prefWidth="94.0" text="Delete User" />
       <Label fx:id="urlLabel" layoutX="303.0" layoutY="138.0" text="Label" />
       <Button layoutX="602.0" layoutY="133.0" mnemonicParsing="false" onAction="#uploadURL" text="Upload Picture" />
+      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="158.0" layoutX="14.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
