--- a/src/attendenceproject/gui/view/currentUser.fxml
+++ b/src/attendenceproject/gui/view/currentUser.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -35,5 +36,6 @@
       <Label fx:id="urlLabel" layoutX="303.0" layoutY="138.0" text="Label" />
       <Button layoutX="602.0" layoutY="133.0" mnemonicParsing="false" onAction="#uploadURL" text="Upload Picture" />
       <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="158.0" layoutX="14.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
+      <JFXButton layoutX="603.0" layoutY="182.0" onAction="#markAttendance" text="Mark attendance" />
    </children>
 </AnchorPane>
